--- a/topbar/pubspec.yaml
+++ b/topbar/pubspec.yaml
@@ -4,10 +4,12 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^0.1.0
+  english_words: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
+
 
 dev_dependencies:
   flutter_test:
